# dogsearch_model

./: Dockerfile  README.md  prepare.sh  setup.py
code/: setup.cfg
code/dogsearch/model/: __init__.py
code/dogsearch/model/random/: __init__.py
code/dogsearch/model/real/: __init__.py  color.py  tail.py  text.py
code/dogsearch/model/real/train_notebooks/: Objects detection.ipynb
data/breed/: tails.csv
data/breed/models/: 0.h5  1.h5  2.h5
data/breed/trained_model_0/: keras_metadata.pb  saved_model.pb
data/breed/trained_model_0/variables/: variables.index
data/breed/trained_model_1/: keras_metadata.pb  saved_model.pb
data/breed/trained_model_1/variables/: variables.index
data/breed/trained_model_2/: keras_metadata.pb  saved_model.pb
data/breed/trained_model_2/variables/: variables.index
dogsearch/model/: __init__.py  __main__.py
dogsearch/model/random/: __init__.py
dogsearch/model/real/: __init__.py  utils.py
dogsearch/model/real/train_notebooks/: Predict (test set).ipynb
