[metadata]
name = dogsearch_model
version = 1.0
description = Dog Search (model)
[options]
packages = find:
install_requires = 
    imageai==2.1.6
    tensorflow==2.4.0
    scikit-learn
    pandas
    tesseract
    pytesseract
    python-Levenshtein
[pycodestyle]
max-line-length = 88
ignore = E203,W503
